--- a/index.html
+++ b/index.html
@@ -7,13 +7,36 @@
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
+  <link href="https://fonts.googleapis.com/css?family=Cousine" rel="stylesheet">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 
-<body>
-  <h1>My Resume</h1>
+<body> 
+  
+  <div class="container">
+  <header>
+      <h1>My Resume</h1>
+    <nav>
+      <a href=''>About Me</a>
+      <a href=''>Skills</a>
+      <a href=''>Work</a>
+      <a href=''>Contact</a>
+    </nav>
+  </header>
+
+  <section class='middle-content'>
+      <div class='image'>
+        <img src="desk-pic.png" alt="me sitting on a chair">
+      </div>
+      <p class='my-name'>Aruna Benjamin - Full Stack Web Dev</p>
+      <p>I am a full stack Developer looking for a position.</p>
+      <p>I am excited to utlize my skills and developing experience for you.
+        Contact me if you are interested.
+      </p>
+  </section>
+  <div>
 </body>
 </html>
