added the education and the skills in html and css

--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@
       <p>I am excited to utlize my skills and developing experience for you.
         Contact me if you are interested.
       </p>
+      <button>Check my work</button>
+  </section>
+
+  <section class='skills-content'>
+    <div class='left-content'>
+      <h2>Education </h2>
+      <p>My skills attained at Lambda</p>
+    </div>
+    <div class='left-content-1'>
+      <h3>Skills learnt:</h3>
+      <div class='languages'>
+        <div>HTML</div>
+        <div>CSS</div>
+        <div>Javascript</div>
+      </div>
+    </div>
+  </section>
+
+  <section class='work-content'> 
+    <h2>Work history</h2>
+    <p>
+      <div>Years</div>
+      <div>Company</div>
+      <div>Title</div>
+      <div>Tech Used</div>
+    </p>
   </section>
   <div>
 </body>
