added the work area in the html and the css

--- a/index.html
+++ b/index.html
@@ -56,13 +56,37 @@
 
   <section class='work-content'> 
     <h2>Work history</h2>
-    <p>
-      <div>Years</div>
-      <div>Company</div>
-      <div>Title</div>
-      <div>Tech Used</div>
-    </p>
+    <div class='work-content-1'>
+      <div>
+        <p class='st-col'>Years</p>
+        <p>Company</p>
+        <p>Title</p>
+        <p>Tech Used</p>
+      </div> 
+      <div class='work-1'>
+          <p class='st-col'>1yr</p>
+          <p>Google</p>
+          <p>Email Specialist</p>
+          <p>Google Apps</p>
+      </div> 
+      <div>
+          <p class='st-col'>6 months</p>
+          <p>Netgear</p>
+          <p>RF Test Engineer</p>
+          <p>Routers</p>
+      </div> 
+      <div class='work-1'>
+          <p class='st-col'>8 months</p>
+          <p>Cradlepoint</p>
+          <p>Firmware Engineer</p>
+          <p>Routers</p>
+      </div> 
+    </div>
   </section>
+
+  <footer>
+    <p>Copyright Awesomeness 2019</p>
+  </footer>
   <div>
 </body>
 </html>
