added the mobile view in the html and the less file

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
@@ -17,7 +17,7 @@
 <body> 
   
   <div class="container">
-  <header>
+  <header class='header-content'>
       <h1>My Resume</h1>
     <nav>
       <a href=''>About Me</a>
@@ -61,25 +61,25 @@
         <p class='st-col'>Years</p>
         <p>Company</p>
         <p>Title</p>
-        <p>Tech Used</p>
+        <p class='st-col-1'>Tech Used</p>
       </div> 
       <div class='work-1'>
           <p class='st-col'>1yr</p>
           <p>Google</p>
           <p>Email Specialist</p>
-          <p>Google Apps</p>
+          <p class='st-col-1'>Google Apps</p>
       </div> 
       <div>
           <p class='st-col'>6 months</p>
           <p>Netgear</p>
           <p>RF Test Engineer</p>
-          <p>Routers</p>
+          <p class='st-col-1'>Routers</p>
       </div> 
       <div class='work-1'>
           <p class='st-col'>8 months</p>
           <p>Cradlepoint</p>
           <p>Firmware Engineer</p>
-          <p>Routers</p>
+          <p class='st-col-1'>Routers</p>
       </div> 
     </div>
   </section>
